syntax = "proto3";

package project.planton.provider.aws.awssecuritygroup.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/aws/awssecuritygroup/v1/spec.proto";
import "project/planton/provider/aws/awssecuritygroup/v1/stack_outputs.proto";
import "project/planton/shared/status.proto";
import "project/planton/shared/metadata.proto";

//aws-security-group
message AwsSecurityGroup {
  //api-version
  string api_version = 1[
    (buf.validate.field).string.const = 'aws.project-planton.org/v1'
  ];

  //resource-kind
  string kind = 2 [
    (buf.validate.field).string.const = 'AwsSecurityGroup'
  ];

  //metadata
  project.planton.shared.ApiResourceMetadata metadata = 3 [
    (buf.validate.field).required = true
  ];

  //spec
  AwsSecurityGroupSpec spec = 4 [
    (buf.validate.field).required = true
  ];

  //status
  AwsSecurityGroupStatus status = 5;
}

//aws-security-group status
message AwsSecurityGroupStatus {
  //lifecycle
  project.planton.shared.ApiResourceLifecycle lifecycle = 99;

  //audit-info
  project.planton.shared.ApiResourceAudit audit = 98;

  //stack-job id
  string stack_job_id = 97;

  //stack-outputs
  AwsSecurityGroupStackOutputs outputs = 1;
}
